# mintaka

./: Makefile.am  Makefile.in  configure  configure.ac
src/: Makefile.am  Makefile.in  mintaka-filebase.c  mintaka-fortran.c  mintaka-index.c  mintaka-merge.c  mintaka-merger.c  mintaka.c  mintaka.h
test/: Makefile.am  Makefile.in  test.c
